# Haskell-Game

./: Haskell-Game.cabal  README.md  design(Updated).docx  design1.docx
saveFiles/: save1.json
src/: Controller.hs  GameMechanics.hs  Main.hs  Model.hs  Offscreen.hs  View.hs
