name:                Haskell-Game
version:             0.1.0.0
author:              Alejandro Serrano
maintainer:          A.SerranoMena@uu.nl
category:            Game
build-type:          Simple
cabal-version:       >=1.10


executable Haskell-Game
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       gloss,
                       random
  hs-source-dirs:      src
  other-modules:       Controller
                     , Model
                     , View
  default-language:    Haskell2010