name:                Haskell-Game
version:             0.1.0.0
author:              Lex Klaassen and Viggo de Breij
maintainer:          -
category:            Game
build-type:          Final
cabal-version:       >=1.10


executable Haskell-Game
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       gloss,
                       random,
                       containers,
                       aeson,
                       bytestring,
                       directory
  hs-source-dirs:      src
  other-modules:       Controller
                     , Model
                     , View
                     , GameMechanics
                     , Offscreen
  default-language:    Haskell2010